Fixed some spacing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -64,7 +64,7 @@ a {
      background: url("../images/logo.png") center top no-repeat;
      width: 240px;
      height: 148px;
-     margin: 0 auto 2em auto;
+     margin: 0 auto 3em auto;
      background-color: transparent;
      border: 0;
      overflow: hidden;
